--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-  <script defer src="runtime.js"></script><script defer src="main.js"></script></head>
+  </head>
   <body>
     <label class="zip" for="zip">Please enter your 5-digit US Zip Code</label>
     <input id="zip" name="zip" type="text" maxlength="5" placeholder="12345"/>
