did all styling and got the render function working and then got the clear function working

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,11 @@
     <title>Weather App</title>
   </head>
   <body>
-    <label class="zip" for="zip">Please enter your 5-digit US Zip Code</label>
-    <input id="zip" name="zip" type="text" maxlength="5" placeholder="12345"/>
-    <button class="zip-button">Submit</button>
+    <div class="input">
+      <label class="zip" for="zip">Please enter your 5-digit US Zip Code</label>
+      <input class="zip" id="zip" name="zip" type="text" maxlength="5" placeholder="12345"/>
+      <button class="zip-button">Submit</button>
+    </div>
+    <div class="display"></div>
   </body>
 </html>
