added toggle function

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
       <input class="zip" id="zip" name="zip" type="text" maxlength="5" placeholder="12345"/>
       <button class="zip-button">Submit</button>
     </div>
+    <div class="toggle">
+      <button class="toggle-button far">F° / C°</button>
+    </div>
     <div class="display"></div>
   </body>
 </html>
